    - Drop all current patches, applied upstream
    - Update symbols file
  * Add some post-release bug fix patches
  * Simplify autopkgtest now that test-local-pull seems to be stable
  * Unexport HTTP proxy variables in autopkgtest to work around lack of
    support for no_proxy, which breaks the tests on Ubuntu autopkgtest.
    We don't actually need Internet access, so this is OK.

 -- Simon McVittie <smcv@debian.org>  Tue, 03 Oct 2017 19:14:14 +0100

ostree (2017.11-2) unstable; urgency=medium

  * Replace patch with the version applied upstream in 2017.12
  * Standards-Version: 4.1.0 (no changes)
  * Add a patch to fix FTBFS in non-English locales
  * Add a patch to fix FTBFS if building as root with umask != 022,
    which for some reason debomatic does (Closes: #876138)
  * Add a patch from upstream to fix undefined behaviour with
    O_RDONLY|O_CREAT in rofiles-fuse

 -- Simon McVittie <smcv@debian.org>  Fri, 22 Sep 2017 15:48:24 +0100

ostree (2017.11-1) unstable; urgency=medium

  * New upstream release
    - Drop all current patches, applied upstream
    - Update symbols file
  * Adjust Description and Upstream-Name to emphasize libostree
  * Classify new ostree-tmpfiles.conf as part of ostree-boot, and so
    don't install it yet
  * Stop copying an old ostree-trivial-httpd.xml from debian/dist/
    into source tree. Upstream distributes it again, and has since
    2017.8.
  * Add a patch to fix JavaScript tests with gjs 1.50.0, which is
    more strict about 'let'
  * Stop providing "ostree trivial-httpd" CLI, following upstream
    default behaviour. flatpak used to use it in its tests, but
    the version in stable no longer does.

 -- Simon McVittie <smcv@debian.org>  Fri, 15 Sep 2017 16:58:15 +0100

ostree (2017.10-1) unstable; urgency=medium

  * New upstream release
    - Update symbols file
    - Install new bash completions
  * Use dh_missing --fail-missing instead of dh_install --fail-missing